gateways/ingress/authpolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: ingress-policy
  namespace: bookinfo-ingress
spec:
  targetRefs:
  - kind: Gateway
    group: gateway.networking.k8s.io
    name: bookinfo-gateway
  action: ALLOW
  rules:
  - to:
    - operation:
        methods: ["GET"]
